--- a/ChatApplicationAPI/Client-App/src/app/component/join-room/join-room.component.html
+++ b/ChatApplicationAPI/Client-App/src/app/component/join-room/join-room.component.html
@@ -5,7 +5,7 @@
         <div class="text-center mb-5 text-dark">Please Join the Room to start Chatting</div>
         <div class="card my-5">
   
-          <form class="card-body cardbody-color p-lg-5">
+          <form [formGroup]="joinRoomForm" class="card-body cardbody-color p-lg-5">
   
             <div class="text-center">
               <img src="https://tse2.mm.bing.net/th?id=OIP.rK4pMbvbRUtthhaFxhlvqwHaFj&pid=Api&P=0&h=220"
@@ -20,7 +20,7 @@
               <input formControlName="room" type="text" class="form-control" id="roomname" placeholder="Room Name">
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-color px-5 mb-5 w-100">Join</button>
+              <button [disabled]="joinRoomForm.invalid" (click)="joinRoom()"  type="submit" class="btn btn-color px-5 mb-5 w-100">Join</button>
             </div>
           </form>
         </div>
